feat: improve security and error handling
- Enhanced security measures for user-related operations
- Improved user data processing logic
- Extended global error handler to cover additional cases
- Various minor improvements and optimizations

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,17 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:h2:file:./h2test
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.url=jdbc:h2:file:/Users/Oleg/IdeaProjects/interview_projects/cinema-management-system/src/main/resources/db/h2_dev;AUTO_SERVER=TRUE
+
 spring.h2.console.enabled=true
+
+spring.sql.init.data-locations=classpath:db/dev_seed_data.sql
 
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 app.security.public-endpoints=/api/users/login,/api/users/register/customer,/swagger-ui/**,/v3/api-docs/**,/h2-console/**
+
+#logging.level.root=debug
